# clinical-spell-checker

./: .gitattributes  .gitignore  Dockerfile  README.md  blog_post.md  blog_post_wordpress.html  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh  start_lite.bat  start_lite.sh
dictionary/: README.md  build_dictionary.py  clinical_abbreviations.py  extract_umls_api.py  extract_umls_terms.py
docs/: dictionary_abbreviations.tsv
examples/: working_sample.csv  working_sample_clean.csv
output/: corrected_corpus 1_100.csv  report_1_100.csv
screener/: __init__.py  __main__.py  mlm.py  server.py
screener/static/: compare.html  index.html
